--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "oauth2client": "^1.0.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.10.10",
